# nest

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.demo  LICENSE  Makefile  README.md  entrypoint.sh  go.mod  go.sum
.claude/agents/: README.md  architect.md  reviewer.md  swe.md  validation.md
.claude/commands/: callgraph.md  contracts.md  debug-loop.md  dev-loop.md  full-analysis.md  scaling.md  static-rigor.md
docs/: ADMIN_GUIDE.md  ANALYTICS_QUERIES.md  INTEGRATION_GUIDE.md  NESTUI_GUIDE.md  NEST_DESIGN.md  NEST_MODULES.md  NEST_STAGING.md  NEST_UI.md  RULES_ENGINE.md  WRITING_UDFS.md
docs/old/: COOP_ANALYSIS.md  COOP_LITE_ARCHITECTURE.md  COOP_LITE_GO_ARCHITECTURE.md  FRUITFLY_DESIGN.md
internal/auth/: auth_test.go  context.go  hashing.go  middleware.go  middleware_test.go  passwords.go  rbac.go  sessions.go  signing.go
internal/config/: config.go  config_test.go
jetstream/: run.sh  run_timed.sh
loadtest/: docker-compose.yml  nest.env  run.sh  run_timed.sh
migrations/: 001_initial.sql  002_partitions.sql  003_mrt_queue_archive.sql  004_rules_unique_name.sql  005_mrt_decision_target_queue.sql
nest-ui/: main.py  pyproject.toml
nest-ui/api/: client.py  types.py
nest-ui/auth/: middleware.py  state.py
nest-ui/components/: layout.py  starlark_editor.py
nest-ui/pages/: actions.py  api_keys.py  dashboard.py  item_types.py  login.py  mrt.py  policies.py  rules.py  settings.py  signals.py  text_banks.py  users.py
nest-ui/tests/: conftest.py  test_auth.py  test_client.py  test_components.py  test_main.py  test_pages.py  test_types.py
(+152 files in other folders)
