[project]
name = "nest-ui"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "nicegui>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "auth*", "components*", "pages*"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
